<resources>
    <string name="login_id_key">login id key</string>
    <string name="app_name">Ecole des Loustics</string>
    <string name="exercice5">Exercice 5</string>
    <string name="btnConfirm">Valider</string>
    <string name="btnRetour">Choisir un autre exercice</string>
    <string name="number">Choisis la difficulté</string>
    <string name="corriger">CORRIGER</string>
    <string name="btnCancel">Réessayer</string>
    <string name="errors">Nombre d\'erreurs :</string>
    <string name="btnHome">Retour au menu</string>
    <string name="add_user_btn">Ajouter un utilisateur</string>
    <string name="input_prenom">Votre prénom</string>
    <string name="input_nom">Votre nom</string>
    <string name="previous">Précédent</string>
    <string name="next">Suivant</string>
    <string name="question_nb">Question 1/20</string>
    <string name="list_users">Voir les utilisateurs</string>
    <string name="title_substraction">Exercice de soustraction</string>
    <string name="title_addition">Exercice d\'addition</string>
    <string name="title_multiplication">Exercice de multiplication</string>
    <string name="level_1">CP</string>
    <string name="level_2">CE1/CE2</string>
    <string name="level_3">CM1/CM2</string>
    <string name="loginMain">Se connecter</string>
    <string name="title_grammaire">Exercice de grammaire</string>
</resources>