<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Maths.MathsActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textSize="25sp"
        android:gravity="center"
        />
    <Button
        android:id="@+id/btnLv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_1"
        android:backgroundTint="@color/gray"
        />
    <Button
        android:id="@+id/btnLv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_2"
        android:backgroundTint="@color/gray"
        />
    <Button
        android:id="@+id/btnLv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_3"
        android:backgroundTint="@color/gray"
        />



</LinearLayout>