<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/template_nav_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:backgroundTint="@color/buttons"
            android:text="@string/title_addition"
            android:onClick="onAddition"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_substraction"
            android:layout_marginLeft="10sp"
            android:backgroundTint="@color/buttons"
            android:layout_marginRight="10sp"
            android:onClick="onSubstraction"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_multiplication"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:backgroundTint="@color/buttons"
            android:onClick="onMultiplication"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_grammaire"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:backgroundTint="@color/buttons"
            android:onClick="onCulture"/>

    </LinearLayout>

</LinearLayout>