<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:windowSoftInputMode="stateVisible"
   >
    <TextView
        android:id="@+id/tvNb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_nb"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="15sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/multiplications"
        android:layout_height="400sp"
        android:orientation="vertical"
        android:gravity="center"
        >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity=""
        >
        <Button
            android:id="@+id/btnPrevious"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:backgroundTint="@color/gray"
            android:layout_margin="20dp"
        />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:backgroundTint="@color/gray"
            android:layout_margin="20dp"
             /></LinearLayout>





</LinearLayout>